Use Python 3 for TensorFlow
Change-Id: I5a2b0ab0c22a17ef85aa4ecd63bd07fc2d702b4b

--- a/buildkite/pipelines/tensorflow-postsubmit.yml
+++ b/buildkite/pipelines/tensorflow-postsubmit.yml
@@ -11,10 +11,9 @@ platforms:
       echo '
       android_sdk_repository(name = "androidsdk")
       android_ndk_repository(name = "androidndk")' >>WORKSPACE
-    - yes '' | ./configure
+    - yes '' | python3 ./configure.py
     build_flags:
     - "--config=opt"
-    - "--host_force_python=PY2"
     # Suppress warning messages from all actions
     - "--output_filter=^$"
     build_targets:
@@ -38,7 +37,6 @@ platforms:
     - yes '' | python3 ./configure.py
     build_flags:
     - "--config=opt"
-    - "--host_force_python=PY2"
     # Suppress warning messages from all actions
     - "--output_filter=^$"
     build_targets:
@@ -50,7 +48,6 @@ platforms:
     - echo.| python ./configure.py
     build_flags:
     - "--config=opt"
-    - "--host_force_python=PY2"
     # Suppress warning messages from all actions
     - "--output_filter=^$"
     build_targets:
