msi: create msi outside of "artifacts" dir

--- a/pipelines/bazel-release.yml
+++ b/pipelines/bazel-release.yml
@@ -140,7 +140,8 @@ steps:
       output\bazel build -c opt --copt=-w --host_copt=-w --stamp --embed_label %RELEASE_NAME% src/bazel scripts/packages/bazel.zip
 
       mkdir artifacts
-      move bazel-bin\src\bazel artifacts\bazel-%RELEASE_NAME%-windows-x86_64.exe
+      @rem # make_msi creates temp files next to the binary that we don't want to upload, so move the binary to "." first.
+      move bazel-bin\src\bazel bazel-%RELEASE_NAME%-windows-x86_64.exe
       move bazel-genfiles\scripts\packages\bazel.zip artifacts\bazel-%RELEASE_NAME%-windows-x86_64.zip
 
       cd artifacts
